--- a/style.css
+++ b/style.css
@@ -4,13 +4,33 @@
     box-sizing: border-box;
 }
 
+:root {
+    --text-color: white;
+    --bg-url: url(./images/bg-mobile-dark.jpg);
+    --stroke-color: rgba(255, 255, 255, 0.5);
+    --surface-color: rgba(255, 255, 255, 0.1);
+    --surface-color-hover: rgba(255, 255, 255, 0.05);
+    --highlight-color: rgba(255, 255, 255, 0.2);
+    --switch-bg-url: url(./images/MoonStars.svg);
+}
+
+.light {
+    --text-color: black;
+    --bg-url: url(./images/bg-mobile-light.jpg);
+    --stroke-color: rgba(0, 0, 0, 0.5);
+    --surface-color: rgba(0, 0, 0, 0.05);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
+    --highlight-color: rgba(0, 0, 0, 0.1);
+    --switch-bg-url: url(./images/Sun.svg);
+}
+
 body {
-    background: url(./images/bg-mobile-dark\ \(1080x1920\).jpg) no-repeat top center/cover;
+    background: var(--bg-url) no-repeat top center/cover;
 }
 
 body * {
     font-family: 'Inter', sans-serif;
-    color: #FFFFFF;
+    color: var(--text-color);
 }
 
 #container {
@@ -34,6 +54,40 @@ body * {
     margin-top: 8px;
 }
 
+#switch {
+    position: relative;
+    width: 64px;
+    margin: 4px auto;
+}
+
+#switch button {
+    width: 32px;
+    height: 32px;
+    background: white var(--switch-bg-url) no-repeat center;
+    border: 0;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%)
+}
+
+.light #switch button {
+    right: 0;
+    left: initial;
+}
+
+#switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+}
+
 ul {
     list-style: none;
     display: flex;
@@ -47,8 +101,8 @@ ul li a {
     justify-content: center;
     align-items: center;
     padding: 16px 24px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
     border-radius: 8px;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -58,8 +112,8 @@ ul li a {
 }
 
 ul li a:hover {
-    background: rgba(255, 255, 255, 0.05);
-    border: 1px solid white;
+    background: var(--surface-color-hover);
+    border: 1px solid var(--text-color);
 }
 
 #social-links {
@@ -79,6 +133,12 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: var(--highlight-color);
     transition: all 0.2s;
+}
+
+footer {
+    padding: 24px 0;
+    text-align: center;
+    font-size: 14px;
 }
