--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 
 body {
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -34,7 +35,8 @@ body * {
 }
 
 #container {
-    width: 360px;
+    width: 100%x;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
@@ -141,4 +143,14 @@ footer {
     padding: 24px 0;
     text-align: center;
     font-size: 14px;
+}
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./images/bg-desktop-dark.jpg);
+    }
+
+    .light {
+        --bg-url: url(./images/bg-desktop-light.jpg);
+    }
 }
