--- a/style.css
+++ b/style.css
@@ -72,12 +72,16 @@ body * {
     top: 50%;
     left: 0;
     z-index: 1;
-    transform: translateY(-50%)
+    transform: translateY(-50%);
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -152,5 +156,25 @@ footer {
 
     .light {
         --bg-url: url(./images/bg-desktop-light.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+
+    to {
+        left: 0;
     }
 }
